fix: update TypeScript config and card schema

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -17,7 +17,7 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
-    "types": ["node"],
-    "lib": ["ES2023", "DOM"]
+    "lib": ["ES2023", "DOM"],
+    "moduleResolution": "node"
   }
 }
