--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "node": "20.x"
   },
   "scripts": {
+    "prebuild": "npm install --save-dev @types/node",
     "build": "npx @nestjs/cli build",
     "format": "prettier --write \"src/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\"",
