--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,6 @@
     "node": "20.x"
   },
   "scripts": {
-    "prebuild": "npm install --save-dev @types/node",
     "build": "npx @nestjs/cli build",
     "format": "prettier --write \"src/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\"",
@@ -23,18 +22,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.1.1",
+    "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/mapped-types": "^2.0.5",
-    "@nestjs/mongoose": "^10.0.1",
+    "@nestjs/mongoose": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/swagger": "^7.1.17",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "mongoose": "^8.1.1",
+    "@types/node": "^20.11.24",
+    "mongoose": "^8.2.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "uuid": "^9.0.1"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -42,16 +37,15 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.11.24",
     "@types/supertest": "^2.0.12",
-    "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
-    "@typescript-eslint/parser": "^5.59.11",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
