--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -17,7 +17,7 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "types": ["node"],
-    "typeRoots": ["./node_modules/@types"]
+    "lib": ["ES2021", "DOM"],
+    "moduleResolution": "node"
   }
 }
