--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "node": "20.x"
   },
   "scripts": {
-    "build": "nest build",
+    "build": "npx @nestjs/cli build",
     "format": "prettier --write \"src/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\"",
     "start": "nest start",
